# kata-bootstraps

./: .gitignore  KataTest.cs  LICENSE  README.md  a.test.txt  def.txt  dotnet.csproj  e.test.txt  funFact.txt  joris_test.txt  kata.cpp  kata.hpp  kata.sh  mock_logger.hpp  test_file
.github/: dependabot.yml
.github/workflows/: awk.yml  clojure.yml  cpp.yml  crystal.yml  csharp.yml  go.yml  java.yml  js.yml  maven.yml  nodejs.yml  php.yml  phyton.yml  python.yml  rescript.yml  ruby.yml  rust.yml  scala.yml  scripts.yml  swift.yml  sync-devcontainer-branches.yml  ts.yml  win.yml
.scripts/: assure_failing_test.sh
atests/: build.gradle
awk/: Makefile
awk/src/: apb.awk  wee.awk
awk/test/: tests.awk
clojure/deps-cli/: .gitignore  CHANGELOG.md  README.md  build.clj  deps.edn  test.sh
clojure/lein/: CHANGELOG.md  README.md  project.clj  test.sh
cpp/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  build.sh  docker_up.sh
cpp/googlemock/: README.md  disk_logger.cpp  disk_logger.hpp  docker_test.sh  kata.cpp  kata.hpp  kata_test.cpp  logger.hpp  makefile
cpp/googlemock/.devcontainer/: devcontainer.json
cpp/include/: doctest.h
cpp/src/: game_of_life.cpp  hello_world.cpp  kata.cpp
crystal/spectator/: README.md  shard.yml
csharp/dotnet/: Kata.cs
csharp/dotnet-core/: dotnet-core.sln  readme.md
csharp/dotnet-core3/: dotnet-core3.sln
csharp/dotnet-core5/: dotnet-core5.sln  readme.md
csharp/dotnet6/: .editorconfig  DotnetStarter.sln  README.md
csharp/dotnet7/: .gitignore  README.md
d/silly/: .gitignore  README.md  dub.json
d/unit-threaded/: .gitignore  README.md  dub.json
dart/dart_test/: README.md  pubspec.yaml
elixir/: .gitignore  README.md  mix.exs
elixir/config/: config.exs
elixir/lib/: kata.ex
elixir/test/: kata_test.exs
fsharp/dotnet/: README.md  katas.sln  test.sh
fsharp/dotnet7/: README.md  dotnet7.sln
go/ginkgo/: Dockerfile  README.md  ginkgo_suite_test.go  go.sum  kata_test.go  run_tests.sh
go/testify/: README.md  go.mod  kata_test.go  testdoubles_test.go
golang/: README.md  game.go
golang/ginkgo/: README.md  docker_up.sh  go.mod  golang_suite_test.go  kata_test.go
haskell/: .gitignore  README.md
java/: .gitignore  README.md  test_gradlew.sh  update_gradlew.sh
myapp/: build.gradle
php/: .gitignore  README.md  composer.json  phpunit.phar  phpunit.xml  test.sh
rescript/: .gitignore  README.md  bsconfig.json  package-lock.json  package.json
rust/: Cargo.toml  README.md  test.sh
(+346 files in other folders)
